@@ -218,6 +218,43 @@ function DetectSD70M() -- Sherman Hill
    end
 end
 
+function DetectCabCar() -- Pacific Surfliner and its addons
+   if Call("*:ControlExists", "ThrottleAndBrake", 0) == 1 and
+      Call("*:ControlExists", "RPMDelta", 0) == 1 and
+      Call("*:ControlExists", "CompressorState", 0) == 1 and
+      Call("*:ControlExists", "AWS", 0) == 1 and
+      Call("*:ControlExists", "AWSReset", 0) == 1 and
+      Call("*:ControlExists", "HornHB", 0) == 1 and
+      Call("*:ControlExists", "Flash", 0) == 1 and
+      Call("*:ControlExists", "AirConFan", 0) == 1 and
+      Call("*:ControlExists", "DoorsOpenCloseLeft", 0) == 1 and
+      Call("*:ControlExists", "DoorsOpenCloseRight", 0) == 1 and
+      Call("*:ControlExists", "EqReservoirPressurePSI", 0) == 1
+   then
+      return 1
+   end
+end
+
+function DetectF59PHI() -- Pacific Surfliner and its addon
+end
+
+function DetectF59PH() -- Pacific Surfliner addon
+   if Call("*:ControlExists", "ThrottleAndBrake", 0) == 1 and
+      Call("*:ControlExists", "RPMDelta", 0) == 1 and
+      Call("*:ControlExists", "CompressorState", 0) == 1 and
+      Call("*:ControlExists", "AWS", 0) == 1 and
+      Call("*:ControlExists", "AWSReset", 0) == 1 and
+      Call("*:ControlExists", "HornHB", 0) == 1 and
+      Call("*:ControlExists", "Flash", 0) == 1 and
+      Call("*:ControlExists", "HEPGen", 0) == 1 and
+      Call("*:ControlExists", "VisorLeft", 0) == 1 and
+      Call("*:ControlExists", "VisorMiddle", 0) == 1 and
+      Call("*:ControlExists", "VisorRight", 0) == 1
+   then
+      return 1
+   end
+end
+
 -- some general detections
 
 function DetectUK() -- MPH and BAR, should be UK, hopefully
